--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,13 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
-        "consoletvs/charts": "^6.5",
+        "consoletvs/charts": "6.*",
         "fideloper/proxy": "^4.0",
         "intervention/image": "^2.5",
         "laravel/framework": "^6.0",
         "laravel/passport": "^8.0",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "pusher/pusher-php-server": "^4.1"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
